GNOME Bugzilla – Bug 737864
GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Last modified: 2014-10-19 14:06:08 UTC
Using Debian Sid/unstable with Evince 3.14.0, opening a PDF file the following is printed to the terminal. (evince:17251): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed Using `G_DEBUG=fatal-warnings`, GDB stops at and the backtrace below is obtained. Program received signal SIGTRAP, Trace/breakpoint trap. g_logv (log_domain=0xb711f956 "GLib-GObject", log_level=G_LOG_LEVEL_CRITICAL, format=0x0, args=0x0) at /build/glib2.0-BmD7JP/glib2.0-2.42.0/./glib/gmessages.c:1046 1046 /build/glib2.0-BmD7JP/glib2.0-2.42.0/./glib/gmessages.c: Datei oder Verzeichnis nicht gefunden. (gdb) set logging true /tmp/20141003--evince--t-a-a-bt-f.txt
+ Trace 234173
Thread 1 (Thread 0xb651d880 (LWP 18101))
This happens when we open the file directly to fullscreen, for instance, by running evince -f file.pdf
Thanks for the bug report, I've just pushed a fix to git master.